va-734 prevent overflow ul

--- a/src/styles/h5p-multi-media-choice.scss
+++ b/src/styles/h5p-multi-media-choice.scss
@@ -12,7 +12,9 @@
     // Removes <ul> default indentation
     padding: var(--h5p-theme-spacing-m);
     list-style-type: none;
-    width: 100%;
+    width: fill-available;
+    width: -webkit-fill-available;
+    width: -moz-available;
     margin: 0px;
     position: relative;
     margin: 0 auto;
